--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ p {
 }
 
 .hero {
-    width: 50%;
     letter-spacing: 1px;
     position: relative;
     color: #ffffff;
@@ -165,4 +164,38 @@ p {
 
 @keyframes fadeOut {
     to { opacity: 0; transform: translateY(20px); }
+}
+
+/*Footer*/
+
+footer {
+    background-color: #340068;
+    border-top: 2px solid rgba(255, 255, 255, 0.2);
+    padding: 20px 0;
+}
+
+.footer-content {
+    text-align: center;
+}
+
+.footer-content h1 {
+    font-family: MC;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #ffffff;
+}
+
+.footer-content .dofii {
+    font-family: MC;
+}
+
+
+.footer-content .dofii:hover {
+    text-decoration: underline;
+}
+
+.footer-content p {
+    font-family: MC;
+    font-size: 15px;
+    color: #ffffff;
 }
